Bug 213972 - kde doesn't merge ~/.config/menus/applications-merged to the menu
Summary: kde doesn't merge ~/.config/menus/applications-merged to the menu
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kservice
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-10 13:26 UTC by Kamil Neczaj
Modified: 2016-07-15 11:38 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Described change in patch form, maybe it helps… (359 bytes, patch)
2016-02-13 14:36 UTC, Erin of Yukis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Neczaj 2009-11-10 13:26:59 UTC
Version:            (using KDE 4.3.3)
OS:                Linux
Installed from:    Archlinux Packages

Wine creates .desktop files in ~/.config/menus/applications-merged when installing new applications. Kde doesn't bother with then and doesn't merge the files into 'Applications' menu so all Wine programs are located in 'Lost & Found'. 

The workaround is making a symlink 'kde-applications-merged' to 'applications-merged' in ~/.config/menus directory which is done by many distributions now.
Comment 1 Xwang 2012-10-06 11:50:45 UTC
The issue is still present in 4.9.2.
It is necessary to symlink as above (user based) or to add 
<MergeDir>applications-merged</MergeDir>
at the end of /etc/xdg/menus/kde-applications.menu after <DefaultMergeDirs/>

My system is archlinux X86_64 with kde 4.9.2.

Is it possible to add that line by default?
Comment 2 Erin of Yukis 2015-01-16 16:04:56 UTC
Any particular reason why this bug (that already has a proposed solution!) isn't fixed in KDE 4 or KDE 5? Xwang's solution still works in KDE5, just the file name that has to be edited changed to /etc/xdg/menus/kf5-applications.menu .

Fixing this issue is trivial in both KDE 4 and 5 and a "patch" has already been provided. Even if there is no directory named applications-merged present in the entire menu search path a quick test of mine showed that adding this line does not cause any issues.
Fixing this is only a matter of minutes for anybody with commit access to libkf5service-data (a lot less time than I have already invested in investigating this!) and would provide benefit to (at least) all users of plain WINE (with winemenubuilder), would make KDE more compliant with the menu spec it says it implements and would be (as my tests showed) would cause no side-effects if it doesn't apply on that particular system.

Prevent users bugging you for something so trivial, fix this!
Comment 3 Erin of Yukis 2016-02-13 14:35:03 UTC
Will this eventually be fixed???

It's not like we're asking you to do some really complicated work, the solution has been documented for more than **3 YEARS** and is *TRIVIAL*.
Comment 4 Erin of Yukis 2016-02-13 14:36:11 UTC
Created attachment 97179 [details]
Described change in patch form, maybe it helps…
Comment 5 David Faure 2016-02-13 18:45:53 UTC
Too many bug reports for one man :(

Anyway, I just approved https://git.reviewboard.kde.org/r/127029/ which was written Wednesday to fix this. Expect KF 5.20.0 to have the fix.
Comment 6 Erin of Yukis 2016-02-13 19:39:14 UTC
Since when does KDE have a that review board? I'd have posted this there >1 year ago, if I'd know that it exists.
Anyway: I do understand if you're overloaded at times, thanks for the work you're doing! :-)
Comment 7 David Faure 2016-02-14 15:06:00 UTC
reviewboard has existed for 4 or 5 years I guess :-)
Comment 8 David Edmundson 2016-02-16 13:40:33 UTC
Git commit eb561bab855b90ed2277d846cce2a099c4075dfb by David Edmundson.
Committed on 16/02/2016 at 13:40.
Pushed by davidedmundson into branch 'master'.

Fix chromium/wine apps not loading on some distributions.

xdg-menu install installs local .menu files into .config/menus
/applications-merged/

kservice merges local menus from
.config/menus/$APPLICATIONS_MENU_NAME-merged where
applications_menu_name is a cmake variable of where to install the base
menu.

In most cases it works as $APPLICATIONS_MENU_NAME is "applications"
by default. However some special distributions rename it.

The specification does say you should derive this folder from the menu
you're loading, so we're half following it.
However, there's an overriding clause that if you're loading an
application menu (i.e kde-applications.menu) the default merge directory
must be "applications-merged" instead.[1]
REVIEW: 127029

[1]https://specifications.freedesktop.org/menu-spec/menu-spec-
latest.html

M  +1    -1    src/sycoca/vfolder_menu.cpp

http://commits.kde.org/kservice/eb561bab855b90ed2277d846cce2a099c4075dfb