Fix chromium/wine apps not loading on some distributions.

xdg-menu install installs local .menu files into .config/menus
/applications-merged/

kservice merges local menus from
.config/menus/$APPLICATIONS_MENU_NAME-merged where
applications_menu_name is a cmake variable of where to install the base
menu.

In most cases it works as $APPLICATIONS_MENU_NAME is "applications"
by default. However some special distributions rename it.

The specification does say you should derive this folder from the menu
you're loading, so we're half following it.
However, there's an overriding clause that if you're loading an
application menu (i.e kde-applications.menu) the default merge directory
must be "applications-merged" instead.[1]

BUG: 213972
REVIEW: 127029

[1]https://specifications.freedesktop.org/menu-spec/menu-spec-
latest.html